# multi_agent_coopetition

./: .gitignore  .hud_eval.toml  Dockerfile.hud  README.md  env.py  modal_benchmark.py  modal_orchestrator.py  package.json  pyproject.toml  tasks.py  train_step.py  vercel.json
.hud/: config.json
controller/: __init__.py  __main__.py  hooks.py  tools.py
environment/: __init__.py  server.py
frontend/: index.html  package.json  server.js  styles.css
parliament/: __init__.py  facts.py  live_runner.py  live_timeline.py  models.py  parsing.py  policies.py  scenarios.py  schemas.py  scoring.py  specialists.py  state.py  tools.py  worlds.py
scripts/: audit_taskset.py  diagnose_live_hearing.py  simulate_strategies.py
showcase/: README.md
showcase/app/: .env.example  next.config.ts  vercel.json
showcase/app/app/: globals.css  layout.tsx  page.tsx
showcase/app/components/: CompareTab.tsx  HearingDesk.tsx  PropertyPill.tsx  TrainingTab.tsx
showcase/app/components/posthog/: DocketBriefing.tsx  EventInspector.tsx  EvidenceSourcePanel.tsx  LiveRecordTable.tsx  ParliamentShell.tsx  PropertyPill.tsx  TokenAnalyticsPanel.tsx  TransferOverlay.tsx
showcase/app/hooks/: useSessionStream.ts
showcase/app/lib/: live.ts  replay.ts  types.ts
showcase/app/public/replays/: incident-response-medium-004__loud_capture.json  incident-response-medium-004__targeted_oracle.json  (+1 more)
tests/: conftest.py  test_llm_specialists.py  test_no_leakage.py  test_scoring.py  test_strategies.py  test_tools.py  test_world_generation.py
training/: checkpoints.json  checkpoints_35b.json
